Criado projeto e publicado no heroku. Nas partes de criação e Edição dos produtos até o momento não foi possível locar melhor viewBag para exibir as Categorias.

--- a/CursoMVC/Views/Produtos/Details.cshtml
+++ b/CursoMVC/Views/Produtos/Details.cshtml
@@ -23,16 +23,10 @@
             @Html.DisplayFor(model => model.Quantidade)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.MyProperty)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.MyProperty)
-        </dd>
-        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Categoria)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Categoria.Id)
+            @Html.DisplayFor(model => model.Categoria.Descriacao)
         </dd>
     </dl>
 </div>
