--- a/CursoMVC/Views/Home/Index.cshtml
+++ b/CursoMVC/Views/Home/Index.cshtml
@@ -5,4 +5,5 @@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>Outras partes feitas por Alvaro Pereira link do  projeto no  <a href="https://github.com/Alvaro-net/primeiroMVC">GitHub</a></p>
 </div>
